tests/ui/malformed/do-not-ice-on-note_and_explain.rs
struct A<B>(B);

impl<B> A<B> {
    fn d() {
        fn d() {
            Self(1)
            //~^ ERROR can't reference `Self` constructor from outer item
        }
    }
}

fn main() {}
